[package]
name = "bindexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"]}
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
ethers = "2.0"
lazy_static = "1.4"
tokio-retry = "0.3"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
mongodb = { version = "2.5.0" }
async-trait = "0.1.68"
thiserror = "1"

[[bin]]
name = "bindexer"