[package]
name = "uoindexer"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1.68"
clap = { version = "4.1.6", features = ["derive"] }
ethers = "2.0"
lazy_static = "1.4"
mongodb = { version = "2.5.0" }
rocksdb = "0.20.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-retry = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"

[[bin]]
name = "uoindexer"
